--- a/app/src/main/res/layout/titlebar_toolbar.xml
+++ b/app/src/main/res/layout/titlebar_toolbar.xml
@@ -27,7 +27,9 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:ellipsize="end"
             android:gravity="center"
+            android:maxLines="1"
             android:text="@string/default_title"
             android:textColor="@color/color_333333"
             android:textSize="@dimen/sp_16" />
