--- a/app/src/main/res/layout/dialog_shared.xml
+++ b/app/src/main/res/layout/dialog_shared.xml
@@ -26,7 +26,7 @@
                 android:layout_width="@dimen/dp_34"
                 android:layout_height="@dimen/dp_34"
                 android:scaleType="fitXY"
-                android:src="@drawable/ic_toweixin" />
+                android:src="@drawable/ic_icon_wecheat" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -55,7 +55,7 @@
                 android:layout_width="@dimen/dp_34"
                 android:layout_height="@dimen/dp_34"
                 android:scaleType="fitXY"
-                android:src="@drawable/ic_toweixin2" />
+                android:src="@drawable/ic_icon_wechatfriend" />
 
             <TextView
                 android:layout_width="wrap_content"
