--- a/app/src/main/res/layout/dialog_sinday.xml
+++ b/app/src/main/res/layout/dialog_sinday.xml
@@ -29,7 +29,7 @@
             android:layout_height="0dp"
             android:layout_marginEnd="@dimen/dp_30"
             android:layout_marginStart="@dimen/dp_30"
-            android:background="@android:color/white"
+            android:background="@android:color/transparent"
             android:orientation="vertical"
             app:layout_constraintDimensionRatio="7.2:10"
             app:layout_constraintEnd_toEndOf="parent"
