--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -36,6 +36,7 @@
     <color name="color_6F6E6E">#6F6E6E</color>
     <color name="color_C7C7C7">#C7C7C7</color>
     <color name="color_DCDCDC">#DCDCDC</color>
+    <color name="color_CCCCCC">#CCCCCC</color>
     <color name="color_0267FF">#0267FF</color>
     <color name="color_D8E8FF">#D8E8FF</color>
     <color name="color_F9F6FF">#F9F6FF</color>
