--- a/app/src/main/res/layout/item_messagenotification_web.xml
+++ b/app/src/main/res/layout/item_messagenotification_web.xml
@@ -14,7 +14,7 @@
     tools:ignore="RtlCompat">
 
     <com.flyco.roundview.RoundTextView
-        android:id="@+id/item_time"
+        android:id="@+id/item_createtime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/dp_14"
@@ -32,17 +32,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingBottom="@dimen/dp_11"
-        android:paddingEnd="@dimen/dp_15"
-        android:paddingStart="@dimen/dp_15"
-        android:paddingTop="@dimen/dp_11"
+        android:paddingTop="@dimen/dp_14"
         app:rv_backgroundColor="@android:color/white"
         app:rv_cornerRadius="@dimen/dp_3">
 
         <TextView
             android:id="@+id/item_title"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/dp_15"
+            android:layout_marginStart="@dimen/dp_15"
             android:ellipsize="end"
             android:maxLines="2"
             android:textColor="@color/color_333333"
@@ -51,15 +50,59 @@
             tools:text="重新定义CMA-优财CMA产品5.0新高度" />
 
         <TextView
+            android:id="@+id/item_time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/dp_15"
+            android:layout_marginStart="@dimen/dp_15"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:paddingBottom="@dimen/dp_3"
+            android:paddingTop="@dimen/dp_1"
+            android:textColor="@color/color_999999"
+            android:textSize="@dimen/sp_12"
+            tools:text="4月13日" />
+
+        <TextView
             android:id="@+id/item_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_4"
+            android:layout_marginBottom="@dimen/dp_11"
+            android:layout_marginEnd="@dimen/dp_15"
+            android:layout_marginStart="@dimen/dp_15"
             android:ellipsize="end"
-            android:maxLines="3"
+            android:maxLines="2"
             android:textColor="@color/color_666666"
             android:textSize="@dimen/sp_13"
             tools:text="根据交易所消息，嘉友国际物流股份有限公司首次公开发行股票网上定价发行有效申购户数为14，570股票网上定价发行有效申…" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_0_5"
+            android:background="@color/color_E6E6E6" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_38"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingEnd="@dimen/dp_15"
+            android:paddingStart="@dimen/dp_15">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/message_check"
+                android:textColor="@color/color_666666"
+                android:textSize="@dimen/sp_13" />
+
+            <ImageView
+                android:layout_width="@dimen/dp_16"
+                android:layout_height="@dimen/dp_16"
+                android:src="@mipmap/icon_right_in" />
+
+        </LinearLayout>
     </com.flyco.roundview.RoundLinearLayout>
 
 </LinearLayout>
