--- a/app/src/main/res/layout/activity_mine_course.xml
+++ b/app/src/main/res/layout/activity_mine_course.xml
@@ -17,7 +17,7 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:orientation="vertical"
-        android:visibility="visible">
+        android:visibility="invisible">
 
         <TextView
             android:layout_width="wrap_content"
@@ -44,7 +44,6 @@
             android:textSize="@dimen/sp_14" />
 
     </LinearLayout>
-
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/refreshlayout"
