--- a/app/src/main/res/layout/activity_message_center.xml
+++ b/app/src/main/res/layout/activity_message_center.xml
@@ -66,8 +66,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/color_999999"
-                android:textSize="@dimen/sp_12"
-                tools:text="全新升级 给你不一样的CMA学习体验！" />
+                android:textSize="@dimen/sp_12" />
         </LinearLayout>
     </LinearLayout>
 
@@ -133,8 +132,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/color_999999"
-                android:textSize="@dimen/sp_12"
-                tools:text="您有一门课程即将开始" />
+                android:textSize="@dimen/sp_12" />
         </LinearLayout>
     </LinearLayout>
 
