修改Android 9无法接受消息BUG

--- a/app/src/main/res/layout/activity_cours_answer_detail.xml
+++ b/app/src/main/res/layout/activity_cours_answer_detail.xml
@@ -45,6 +45,8 @@
                             android:layout_height="wrap_content"
                             android:drawablePadding="@dimen/dp_12"
                             android:drawableStart="@mipmap/icon_course_tv"
+                            android:ellipsize="end"
+                            android:maxLines="2"
                             android:paddingBottom="@dimen/dp_11"
                             android:paddingStart="@dimen/dp_12"
                             android:paddingTop="@dimen/dp_12"
