--- a/app/src/main/res/layout/activity_question_answer_detail.xml
+++ b/app/src/main/res/layout/activity_question_answer_detail.xml
@@ -9,10 +9,8 @@
     tools:context="com.ucfo.youcai.view.course.CourseAnswerDetailActivity"
     tools:ignore="RtlCompat">
 
-    <!--标题栏-->
     <include layout="@layout/titlebar_toolbar" />
 
-    <!--占位图-->
     <com.ucfo.youcai.widget.customview.LoadingLayout
         android:id="@+id/loadinglayout"
         android:layout_width="match_parent"
@@ -25,32 +23,41 @@
             android:overScrollMode="never">
 
             <LinearLayout
-                android:id="@+id/top_linear"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/answer_videoname"
+                <LinearLayout
+                    android:id="@+id/top_linear"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawablePadding="@dimen/dp_14"
-                    android:drawableStart="@mipmap/icon_qb_edit2"
-                    android:ellipsize="end"
-                    android:maxLines="2"
-                    android:paddingBottom="@dimen/dp_11"
-                    android:paddingStart="@dimen/dp_12"
-                    android:paddingTop="@dimen/dp_12"
-                    android:textColor="@color/color_666666"
-                    android:textSize="@dimen/sp_15"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:text="来自：题库-1-2运营能力分析资本结构分析经营风险财务风险。" />
+                    android:gravity="center_horizontal"
+                    android:orientation="vertical">
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/dp_10"
-                    android:background="@color/color_F5F5F5" />
+                    <TextView
+                        android:id="@+id/answer_videoname"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:drawablePadding="@dimen/dp_14"
+                        android:drawableStart="@mipmap/icon_qb_edit2"
+                        android:ellipsize="end"
+                        android:maxLines="2"
+                        android:paddingBottom="@dimen/dp_11"
+                        android:paddingEnd="@dimen/dp_0"
+                        android:paddingStart="@dimen/dp_12"
+                        android:paddingTop="@dimen/dp_12"
+                        android:textColor="@color/color_666666"
+                        android:textSize="@dimen/sp_15"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:text="来自：题库-1-2运营能力分析资本结构分析经营风险财务风险。" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dp_10"
+                        android:background="@color/color_F5F5F5" />
+
+                </LinearLayout>
                 <!--学员信息-->
                 <LinearLayout
                     android:id="@+id/answer_user_linear"
