--- a/app/src/main/res/layout/activity_scan.xml
+++ b/app/src/main/res/layout/activity_scan.xml
@@ -4,33 +4,46 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/transparency"
     tools:context="com.ucfo.youcaiwx.view.home.ScanActivity">
+
+    <include
+        android:id="@+id/top_toolbar"
+        layout="@layout/titlebar_toolbar" />
 
     <cn.bingoogolapple.qrcode.zxing.ZXingView
         android:id="@+id/zxingview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/top_toolbar"
         app:qrcv_animTime="1000"
+        app:qrcv_barcodeRectHeight="@dimen/dp_140"
         app:qrcv_borderColor="@android:color/white"
         app:qrcv_borderSize="@dimen/dp_1"
-        app:qrcv_cornerColor="@color/color_019BEB"
-        app:qrcv_cornerDisplayType="inside"
+        app:qrcv_cornerColor="@color/colorPrimary"
+        app:qrcv_cornerDisplayType="center"
         app:qrcv_cornerLength="@dimen/dp_20"
         app:qrcv_cornerSize="@dimen/dp_4"
         app:qrcv_isAutoZoom="true"
+        app:qrcv_isBarcode="false"
+        app:qrcv_isOnlyDecodeScanBoxArea="false"
+        app:qrcv_isScanLineReverse="true"
+        app:qrcv_isShowDefaultGridScanLineDrawable="false"
+        app:qrcv_isShowDefaultScanLineDrawable="true"
         app:qrcv_isShowLocationPoint="true"
+        app:qrcv_isShowTipBackground="true"
         app:qrcv_isShowTipTextAsSingleLine="false"
         app:qrcv_isTipTextBelowRect="true"
-        app:qrcv_maskColor="@android:color/transparent"
+        app:qrcv_maskColor="#33FFFFFF"
         app:qrcv_qrCodeTipText="@string/scan_tiptext"
         app:qrcv_rectWidth="@dimen/dp_200"
-        app:qrcv_scanLineColor="@color/colorAccent"
-        app:qrcv_scanLineSize="@dimen/dp_1"
+        app:qrcv_scanLineColor="@color/colorPrimary"
+        app:qrcv_scanLineMargin="0dp"
+        app:qrcv_scanLineSize="@dimen/dp_0_5"
         app:qrcv_tipTextColor="@android:color/white"
         app:qrcv_tipTextMargin="@dimen/dp_40"
-        app:qrcv_tipTextSize="@dimen/sp_15"
-        app:qrcv_verticalBias="0.5" />
+        app:qrcv_tipTextSize="@dimen/sp_12"
+        app:qrcv_toolbarHeight="@dimen/dp_40"
+        app:qrcv_verticalBias="-1" />
 
     <ImageView
         android:id="@+id/light_btn"
@@ -38,7 +51,7 @@
         android:layout_height="@dimen/dp_30"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="@dimen/dp_50"
+        android:layout_marginBottom="@dimen/dp_100"
         android:clickable="true"
         android:src="@drawable/ic_icon_scan_close" />
 
