--- a/app/src/main/res/layout/activity_leaning_plan_detail.xml
+++ b/app/src/main/res/layout/activity_leaning_plan_detail.xml
@@ -82,35 +82,41 @@
         app:llEmptyImage="@mipmap/icon_restingday"
         app:llEmptyText="">
 
-        <LinearLayout
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:overScrollMode="never">
 
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_9"
-                android:background="@android:color/white"
-                android:padding="@dimen/dp_12"
-                android:text="@string/tab_class"
-                android:textColor="@color/color_333333"
-                android:textSize="@dimen/sp_15"
-                android:textStyle="bold" />
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_0_5"
-                android:layout_marginEnd="@dimen/dp_12"
-                android:layout_marginStart="@dimen/dp_12"
-                android:background="@color/color_E6E6E6" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_9"
+                    android:background="@android:color/white"
+                    android:padding="@dimen/dp_12"
+                    android:text="@string/tab_class"
+                    android:textColor="@color/color_333333"
+                    android:textSize="@dimen/sp_15"
+                    android:textStyle="bold" />
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/listView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:overScrollMode="never" />
-        </LinearLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_0_5"
+                    android:layout_marginEnd="@dimen/dp_12"
+                    android:layout_marginStart="@dimen/dp_12"
+                    android:background="@color/color_E6E6E6" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/listView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:overScrollMode="never" />
+            </LinearLayout>
+        </android.support.v4.widget.NestedScrollView>
 
     </com.ucfo.youcaiwx.widget.customview.LoadingLayout>
 </LinearLayout>
