添加新手引导

--- a/app/src/main/res/layout/activity_add_learning_plan.xml
+++ b/app/src/main/res/layout/activity_add_learning_plan.xml
@@ -14,7 +14,7 @@
     <com.ucfo.youcaiwx.widget.customview.LoadingLayout
         android:id="@+id/loadinglayout"
         app:llEmptyText="@string/learncenter_buyCourseTips"
-        app:llEmptyImage="@mipmap/icon_restingday"
+        app:llEmptyImage="@mipmap/icon_nodata"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
