修改微信登录参数

--- a/app/src/main/res/layout/activity_question_ask_question.xml
+++ b/app/src/main/res/layout/activity_question_ask_question.xml
@@ -30,6 +30,8 @@
                 android:hint="@string/answer_editHinttext"
                 android:inputType="textMultiLine"
                 android:maxLength="500"
+                android:maxLines="200"
+                android:minLines="5"
                 android:overScrollMode="ifContentScrolls"
                 android:paddingEnd="@dimen/dp_14"
                 android:paddingStart="@dimen/dp_14"
