--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,33 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="banner_indicatorId" type="id" />
-    <item type="id" name="id_popup_window_outside_view"/>
-    <item type="id" name="id_popup_window_anim_view"/>
-    <item type="id" name="id_choose_dialog_cancel"/>
-    <item type="id" name="id_choose_dialog_ok"/>
-    <item type="id" name="id_choose_dialog_line"/>
+    <item name="id_popup_window_outside_view" type="id" />
+    <item name="id_popup_window_anim_view" type="id" />
+    <item name="id_choose_dialog_cancel" type="id" />
+    <item name="id_choose_dialog_ok" type="id" />
+    <item name="id_choose_dialog_line" type="id" />
 
     <!-- Messages IDs -->
-    <item type="id" name="auto_focus"/>
-    <item type="id" name="decode"/>
-    <item type="id" name="decode_failed"/>
-    <item type="id" name="decode_succeeded"/>
-    <item type="id" name="encode_failed"/>
-    <item type="id" name="encode_succeeded"/>
-    <item type="id" name="launch_product_query"/>
-    <item type="id" name="quit"/>
-    <item type="id" name="restart_preview"/>
-    <item type="id" name="return_scan_result"/>
-    <item type="id" name="search_book_contents_failed"/>
-    <item type="id" name="search_book_contents_succeeded"/>
-    <item type="id" name="gridview" />
-    <item type="id" name="webview" />
-    <item type="id" name="about_version_code">false</item>
-    <item type="id" name="split">false</item>
-    <item type="id" name="id_private_head"/>
-    <item type="id" name="id_private_msg"/>
+    <item name="auto_focus" type="id" />
+    <item name="decode" type="id" />
+    <item name="decode_failed" type="id" />
+    <item name="decode_succeeded" type="id" />
+    <item name="encode_failed" type="id" />
+    <item name="encode_succeeded" type="id" />
+    <item name="launch_product_query" type="id" />
+    <item name="quit" type="id" />
+    <item name="restart_preview" type="id" />
+    <item name="return_scan_result" type="id" />
+    <item name="search_book_contents_failed" type="id" />
+    <item name="search_book_contents_succeeded" type="id" />
+    <item name="gridview" type="id" />
+    <item name="webview" type="id" />
+    <!--<item type="id" name="about_version_code">false</item>
+    <item type="id" name="split">false</item>-->
+    <item name="about_version_code" type="id" />
+    <item name="split" type="id" />
+    <item name="id_private_head" type="id" />
+    <item name="id_private_msg" type="id" />
 
-    <item name="last_click_time" type="id"/>
+    <item name="last_click_time" type="id" />
 
 
 </resources>
