--- a/app/src/main/res/layout/activity_mine_order_form_detail.xml
+++ b/app/src/main/res/layout/activity_mine_order_form_detail.xml
@@ -121,7 +121,7 @@
                             android:id="@+id/item_course_image"
                             android:layout_width="@dimen/dp_96"
                             android:layout_height="@dimen/dp_58"
-                            android:scaleType="centerCrop"
+                            android:scaleType="fitXY"
                             android:src="@mipmap/banner_default"
                             app:corner_radius="@dimen/dp_4" />
 
